Added proof of concept redis interaction and getting expire duration from config to the token storage service

--- a/.env.dist
+++ b/.env.dist
@@ -22,3 +22,7 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> symfony-bundles/redis-bundle ###
+REDIS_URL=tcp://127.0.0.1:6379?database=0
+###< symfony-bundles/redis-bundle ###
